--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,5 +49,8 @@
       directive
     </p>
   </ng-template>
+  <hr />
+  <app-test></app-test>
+  <app-test></app-test>
   <app-test></app-test>
 </div>
