End of 39, section 2 - ngClass
Not used the ngClass, but just mentioned how to do it - better to check the video again when needed

--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,3 +1,4 @@
+<!-- Important: we can use ngClass as well to attach different classes - see video 39, section 2 -->
 <h3 [ngStyle]="{backgroundColor: getColor()}">
   {{ id }} + {{ getStatus() }}
 </h3>
