ngFor structural directive
end of 40 - section 2, outputting lists with ngFor structural directive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,7 +50,5 @@
     </p>
   </ng-template>
   <hr />
-  <app-test></app-test>
-  <app-test></app-test>
-  <app-test></app-test>
+  <app-test *ngFor="let server of servers"></app-test>
 </div>
